--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngrx/effects": "^14.2.0",
+    "@ngrx/store": "^14.2.0",
+    "@ngrx/store-devtools": "^14.2.0",
     "bootstrap": "^5.3.1",
     "highcharts": "^10.3.3",
     "rxjs": "~7.5.0",
