--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@ngrx/store": "^14.2.0",
     "@ngrx/store-devtools": "^14.2.0",
     "bootstrap": "^5.3.1",
-    "highcharts": "^10.3.3",
+    "chart.js": "^4.4.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
